--- a/victor_website/index.html
+++ b/victor_website/index.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/victor_face.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Victor Veitch</a></h1>
 					<p>Statistical Inference, Machine Learning, Quantum Information</p>
 <!--
@@ -33,8 +33,8 @@
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">News and Travel</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#three">Curriculum Vitae</a></li>
+						<!--<li><a href="#four">Contact</a></li>-->
 					</ul>
 				</nav>
 				<footer>
@@ -80,7 +80,7 @@
 									<ul class="feature-icons">
 										<li class="fa-coffee">I'll be in Boston the week of January 25th</li>
                                         <li class="fa-book">New <a href="http://arxiv.org/abs/1512.03099">preprint</a> on random graph models from exchangeable point processes</li>
-                                        <li class="fa-code">The intro stats course I helped develop as part of Ontario Online is <a href="http://sta220.utstat.utoronto.ca/">online</a>.</li> 
+                                        <li class="fa-code">The <a href="http://sta220.utstat.utoronto.ca/">intro stats course</a> I worked on as part of Ontario Online is now available</li> 
                         <!--                <li class="fa-code">Write all the code</li>
 										<li class="fa-cubes">Stack small boxes</li>
 									
@@ -94,8 +94,12 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Curriculum Vitae</h3>
+                                    <ul class="feature-icons">
+										<li class="fa-book"><a href="https://github.com/vveitch/cv/blob/master/vveitch_cv.pdf">My CV in pdf format</a> (link to github)</li>
+                                        <li class="fa-book"><a href="http://scholar.google.ca/citations?user=xkn_XZgAAAAJ&hl=en&oi=ao">My publications</a> (indexed by Google scholar) </li>
+                                    </ul>
+							<!--		<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -118,11 +122,12 @@
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
-									</div>
+									</div>-->
 								</div>
 							</section>
 
 						<!-- Four -->
+<!--
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
@@ -149,6 +154,7 @@
 									</form>
 								</div>
 							</section>
+-->
 
 						<!-- Five -->
 						<!--
