update for new paper

--- a/victor_website/index.html
+++ b/victor_website/index.html
@@ -78,10 +78,11 @@
 								<div class="container">
 									<h3>News and Travel</h3>
 									<ul class="feature-icons">
-										<li class="fa-coffee">I'll be in Boston the week of January 25th</li>
-                                        <li class="fa-book">New <a href="http://arxiv.org/abs/1512.03099">preprint</a> on random graph models from exchangeable point processes</li>
+                                        <li class="fa-book">New <a href="assets/pdfs/KEG_sampling_estimation.pdf">preprint</a> on sampling and estimation for sparse exchangeable random graphs</li>
+										<li class="fa-coffee">I'll be speaking at the Hausdorff Summer School "Large random graphs: geometry and applications" in April</li>
+                        <!--                <li class="fa-book">New <a href="http://arxiv.org/abs/1512.03099">preprint</a> on random graph models from exchangeable point processes</li>
                                         <li class="fa-code">The <a href="http://sta220.utstat.utoronto.ca/">intro stats course</a> I worked on as part of Ontario Online is now available</li> 
-                        <!--                <li class="fa-code">Write all the code</li>
+                                        <li class="fa-code">Write all the code</li>
 										<li class="fa-cubes">Stack small boxes</li>
 									
 										<li class="fa-coffee">Drink much coffee</li>
