--- a/victor_website/index.html
+++ b/victor_website/index.html
@@ -15,7 +15,18 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
+        <!--Google analytics tracking-->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-91413876-1', 'auto');
+          ga('send', 'pageview');
+
+        </script>
+    </head>
 	<body>
 
 		<!-- Header -->
@@ -34,6 +45,7 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">News and Travel</a></li>
 						<li><a href="#three">Curriculum Vitae</a></li>
+                        <li><a href="#four">Web</a></li>
 						<!--<li><a href="#four">Contact</a></li>-->
 					</ul>
 				</nav>
@@ -68,7 +80,7 @@
                                    
 									<p>I am a PhD candidate in the Department of Statistical Sciences at the University of Toronto working in the group of <a href="http://danroy.org/">Daniel Roy</a>. I am interested in the theory and application of machine learning and statistical inference, with a particular focus on Bayesian non-parametrics and random networks.</p> 
             
-                                    <p>Other interests include statistical genetics, information theory and quantum information theory.</p>
+                                    <p>Other recent interests include privacy, causal inference, information theory, and quantum information theory.</p>
 
 								</div>
 							</section>
@@ -78,8 +90,9 @@
 								<div class="container">
 									<h3>News and Travel</h3>
 									<ul class="feature-icons">
-                                        <li class="fa-book">New <a href="assets/pdfs/KEG_sampling_estimation.pdf">preprint</a> on sampling and estimation for sparse exchangeable random graphs</li>
+                                        <li class="fa-book">New <a href="https://arxiv.org/abs/1611.00843">preprint</a> on sampling and estimation for sparse exchangeable random graphs</li>
 										<li class="fa-coffee">I'll be speaking at the Hausdorff Summer School "Large random graphs: geometry and applications" in April</li>
+                                        <li class="fa-coffee">I'll be speaking at Bayesian Inference in Stochastic Processes at Bocconi University in April</li>
                         <!--                <li class="fa-book">New <a href="http://arxiv.org/abs/1512.03099">preprint</a> on random graph models from exchangeable point processes</li>
                                         <li class="fa-code">The <a href="http://sta220.utstat.utoronto.ca/">intro stats course</a> I worked on as part of Ontario Online is now available</li> 
                                         <li class="fa-code">Write all the code</li>
@@ -127,6 +140,16 @@
 								</div>
 							</section>
 
+                            <section id="four">
+								<div class="container">
+									<h3>Web</h3>
+                                    <ul class="feature-icons">
+										<li class="fa-book"><a href="https://github.com/vveitch">GitHub</a> profile</li>
+                                        <li class="fa-book"><a href="http://sta220.utstat.utoronto.ca">intro stats course</a> I worked on as part of Ontario Online </a> </li>
+                                        <li class="fa-book"><a href="https://en.wikipedia.org/wiki/User:Victor_veitch">Wikipedia</a> profile</li>
+                                    </ul>
+                                </div>
+                            </section>
 						<!-- Four -->
 <!--
 							<section id="four">
